src/tests/fixtures/type_definitions_from_interface/TagAttachedToWrongNode.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
function MyFunc() {}

-----------------
OUTPUT
-----------------
src/tests/fixtures/type_definitions_from_interface/TagAttachedToWrongNode.invalid.ts:1:5 - error: `@gqlType` can only be used on class, interface or type declarations. e.g. `class MyType {}`

1 /** @gqlType */
      ~~~~~~~~~
